// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ItemRadio Should display a CircleIcon with an innerDisc when the input is checked 1`] = `
<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-radio custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={true}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-circle"
      fill="#00AFF5"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        className="jsx-2931153156"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#00AFF5"
      />
      <circle
        className="jsx-2931153156 inner"
        cx="33"
        cy="33"
        fill="#00AFF5"
        r="18"
      />
    </svg>
  </div>
</label>
`;

exports[`ItemRadio Should display a Loader when the component is in loading status 1`] = `
<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-radio custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={true}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <div
      className="jsx-2765694959 kirk-loader"
      style={
        Object {
          "height": "24px",
          "width": "24px",
        }
      }
    >
      <svg
        aria-hidden={true}
        className="kirk-icon kirk-icon-circle spinning"
        fill="#5DD167"
        height={24}
        viewBox="0 0 66 66"
        width={24}
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <circle
          className="jsx-2931153156"
          cx="33"
          cy="33"
          fill="none"
          r="30"
          stroke="#5DD167"
        />
      </svg>
    </div>
  </div>
</label>
`;

exports[`ItemRadio Should forward its props to the Item component 1`] = `
<label
  className="jsx-1542968643 kirk-item kirk-item--clickable kirk-item-radio custom-class-name"
>
  <div
    className="jsx-1542968643 kirk-item-leftText"
  >
    <div
      className="kirk-text kirk-text-title kirk-item-title"
    >
      Label title
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Label
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightText"
  >
    <div
      className="kirk-text kirk-text-subheaderStrong kirk-item-title"
    >
      Data
    </div>
    <div
      className="kirk-text kirk-text-body kirk-item-body"
    >
      Data info
    </div>
  </div>
  <div
    className="jsx-1542968643 kirk-item-rightAddon"
  >
    <input
      checked={false}
      disabled={false}
      name="name"
      onChange={[Function]}
      type="radio"
      value={0}
    />
    <svg
      aria-hidden={true}
      className="kirk-icon kirk-icon-circle"
      fill="#00AFF5"
      height={24}
      viewBox="0 0 66 66"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      
      <circle
        className="jsx-2931153156"
        cx="33"
        cy="33"
        fill="none"
        r="30"
        stroke="#00AFF5"
      />
    </svg>
  </div>
</label>
`;
